# Pesquisa-Eleitoral---SME0807-2025S1-

./: .gitignore  README.md  aepr.ipynb  amostras.ipynb  data_generation.ipynb  main.py  proporcoes.ipynb  proporcoes_comentado.ipynb  pyproject.toml  tamanho_amostral.ipynb
data/full/: total_votos.xlsx
data/sample/: Governador_1_turno_AC.csv  Governador_1_turno_RO.csv  Governador_2_turno_RO.csv  Presidente_1_turno_AC.csv  Presidente_1_turno_AM.csv  Presidente_1_turno_AP.csv  Presidente_1_turno_PA.csv  Presidente_1_turno_RO.csv  Presidente_1_turno_RR.csv  Presidente_1_turno_TO.csv  Presidente_2_turno_AC.csv  Presidente_2_turno_AM.csv  Presidente_2_turno_AP.csv  Presidente_2_turno_PA.csv  Presidente_2_turno_RO.csv  Presidente_2_turno_RR.csv  Presidente_2_turno_TO.csv  Senador_1_turno_AC.csv  Senador_1_turno_RO.csv
src/pesquisa_eleitoral/: __init__.py  aas.py  db.py
src/trabalho/: __init__.py
