[project]
name = "pesquisa-eleitoral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aline", email = "line.asramos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pesquisa-eleitoral = "pesquisa_eleitoral:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
