[project]
name = "pesquisa-eleitoral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aline", email = "line.asramos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[project.scripts]
pesquisa-eleitoral = "pesquisa_eleitoral:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "scipy-stubs>=1.15.3.0",
]

[tool.ruff]
line-length = 79
